new blazorwasm hosted w/ b2c auth

--- a/Server/dotnet-blazor-wasm-hosted-b2c.Server.csproj
+++ b/Server/dotnet-blazor-wasm-hosted-b2c.Server.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>dotnet-blazor-wasm-hosted-b2c.Server-658691E5-24AF-48E0-B424-B7D7610F5F97</UserSecretsId>
     <RootNamespace>dotnet-blazor-wasm-hosted-b2c.Server</RootNamespace>
     <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
   </PropertyGroup>
@@ -15,5 +16,11 @@
     <ProjectReference Include="..\Shared\dotnet-blazor-wasm-hosted-b2c.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.5" NoWarn="NU1605" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.5" NoWarn="NU1605" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.1.0" />
+  </ItemGroup>
 
 </Project>
